--- a/opus47/src/App.css
+++ b/opus47/src/App.css
@@ -37,6 +37,22 @@ body {
   color: #5bc0de;
 }
 
+.plus-perf {
+  color: #5bc0de;
+  font-size: 1.4em;
+  margin-left: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+.plus-perf-disabled {
+  color: #ccc;
+  font-size: 1.4em;
+  margin-left: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
 .SearchResult {
   margin: 10px;
 }
@@ -113,6 +129,14 @@ body {
 }
 .p-part {
   font-style: italic;
+}
+
+.newPerf {
+  width: 70%;
+}
+
+.frmtable {
+  width: 100%;
 }
 
 
