--- a/opus47/src/App.css
+++ b/opus47/src/App.css
@@ -10,6 +10,10 @@ body {
   height: 80px;
 }
 
+#root {
+  min-width: 700px;
+}
+
 
 .PieceHeader {
   border: #2179bf 1px solid;
@@ -104,6 +108,7 @@ body {
 
 .SearchResults {
   margin: 20px;
+  min-width: 700px;
 }
 
 @keyframes App-logo-spin {
@@ -138,7 +143,7 @@ body {
 }
 
 .newPerf {
-  width: 70%;
+  min-width: 700px;
 }
 
 .frmtable {
@@ -147,8 +152,13 @@ body {
 }
 
 .new-piece-div {
-  width: 70%;
+  min-width: 700px;
   margin: 20px;
+}
+
+.pform {
+  margin-left: 0px !important;
+  margin-left: 0px !important;
 }
 
 
